crud course commit

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7ad112bac4c53d0121e91d86f52dfb16",
+    "/css/app.css": "/css/app.css?id=228657bbe2cee15c9414aa4c43eabfe8"
 }
